<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Calculator"
    android:background="#000"
    android:stretchColumns="1,2,3,4"
    android:shrinkColumns="1,2,3,4">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/resultRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvResult"
            android:id="@+id/tvResult"
            android:textColor="#FFF"
            android:layout_span="4"
            android:gravity="bottom|right"
            android:height="50dp"
            android:paddingBottom="5dp"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/inputRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvInput"
            android:id="@+id/tvInput"
            android:textColor="#FFF"
            android:textSize="15pt"
            android:layout_span="4"
            android:gravity="right"
            android:paddingBottom="5dp"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Row0">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btClear"
            android:id="@+id/btClear"
            android:background="#eee9e9"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btDelete"
            android:id="@+id/btDelete"
            android:background="#eee9e9"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btPlusMinus"
            android:id="@+id/btPlusMinus"
            android:background="#eee9e9"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btDivide"
            android:id="@+id/btDivide"
            android:background="#ffa500"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Row1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btSeven"
            android:id="@+id/btSeven"
            android:background="#eee9e9"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btEight"
            android:id="@+id/btEight"
            android:background="#eee9e9"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btNine"
            android:id="@+id/btNine"
            android:background="#eee9e9"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btMultiply"
            android:id="@+id/btMultiply"
            android:background="#ffa500"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Row2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btFour"
            android:id="@+id/btFour"
            android:background="#eee9e9"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btFive"
            android:id="@+id/btFive"
            android:background="#eee9e9"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btSix"
            android:id="@+id/btSix"
            android:background="#eee9e9"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btMinus"
            android:id="@+id/btMinus"
            android:background="#ffa500"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Row3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btOne"
            android:id="@+id/btOne"
            android:background="#eee9e9"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btTwo"
            android:id="@+id/btTwo"
            android:background="#eee9e9"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btThree"
            android:id="@+id/btThree"
            android:background="#eee9e9"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btPlus"
            android:id="@+id/btPlus"
            android:background="#ffa500"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Row4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btZero"
            android:id="@+id/btZero"
            android:layout_span="2"
            android:background="#eee9e9"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btDecimal"
            android:id="@+id/btDecimal"
            android:background="#eee9e9"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btEqual"
            android:id="@+id/btEqual"
            android:background="#ffa500"
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>
    </TableRow>
</TableLayout>
